# rnm

./: Cargo.toml  LICENSE  README.md  TODO
src/: cli.rs  errors.rs  main.rs
src/renamable/: abstract_renamable.rs  file.rs  folder.rs  item.rs  mod.rs  new_renamable.rs  renamable.rs
