[package]
name = "rnm"
version = "0.1.0"
edition = "2021"
authors = [ "Bojan Milevski <bojan@bojanmilevski.com>" ]
description = ""
readme = "README.md"
keywords = [ "rename" ]
categories = [ "command-line-utilities" ]
license = "GPL-v3.0"
repository = "https://github.com/bojanmilevski/rnm"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'
strip = true

[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
deunicode = "1.3.3"
lazy-regex = "3.1.0"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["macros", "fs", "rt-multi-thread"] }
walkdir = "2.3.3"
